Fix navbar height on Safari v9+ desktop.

--- a/css/main.css
+++ b/css/main.css
@@ -278,6 +278,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* =============================================================================
+  WEIRD SHIT
+============================================================================= */
+
+/* Reset the height of the nav bar on Safari v9+ desktop. */
+/* http://stackoverflow.com/a/25975282/1171790 */
+_::-webkit-:not(:root:root), .links-wrapper {
+  height: 100vh;
+}
+
+/* =============================================================================
   PRINT STYLES
 ============================================================================= */
 
